--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,28 @@
     "files.associations": {
         "string": "cpp",
         "fstream": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "__hash_table": "cpp",
+        "__split_buffer": "cpp",
+        "__tree": "cpp",
+        "array": "cpp",
+        "bitset": "cpp",
+        "deque": "cpp",
+        "initializer_list": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "queue": "cpp",
+        "set": "cpp",
+        "span": "cpp",
+        "stack": "cpp",
+        "string_view": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
+        "vector": "cpp",
+        "ranges": "cpp",
+        "__node_handle": "cpp",
+        "forward_list": "cpp",
+        "*.ipp": "cpp",
+        "any": "cpp"
     }
 }
