Refactor YoloInferencer for improved task management and clarity
- Updated the YoloInferencer class to include a waitForAllTasks method for better synchronization of inference tasks.
- Simplified the onDecoded method in VideoProcessor by directly invoking the inferencer's infer method.
- Enhanced task handling in the inference process loop to ensure proper task completion tracking.
- Removed commented-out code and unnecessary lines to improve code readability and maintainability.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,7 @@
         "format": "cpp",
         "ostream": "cpp",
         "stop_token": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "condition_variable": "cpp"
     }
 }
