--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,6 +81,8 @@
         "ostream": "cpp",
         "stop_token": "cpp",
         "thread": "cpp",
-        "condition_variable": "cpp"
+        "condition_variable": "cpp",
+        "filesystem": "cpp",
+        "cassert": "cpp"
     }
 }
