Refactor VideoProcessor::process method to improve code clarity by reformatting and organizing cleanup logic. This change enhances readability while maintaining the functionality of resource management and frame processing statistics.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,7 @@
         "thread": "cpp",
         "condition_variable": "cpp",
         "filesystem": "cpp",
-        "cassert": "cpp"
+        "cassert": "cpp",
+        "shared_mutex": "cpp"
     }
 }
