--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 *.exe
 *.out
 *.app
-
 # ----- 调试文件 -----
 *.dSYM/
 *.su
@@ -25,6 +24,7 @@
 # ----- 日志和临时文件 -----
 *.log
 *.tmp
+*.txt
 
 # ----- 构建目录 -----
 build/
