--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ RABBITMQ_NOTIFY_QUEUE=working_in_process_queue
 RABBITMQ_RESULT_QUEUE=target.frame.detected.queue
 RABBITMQ_NOTIFY_ROUTING_KEY=working_in_process_routing_key
 RABBITMQ_RESULT_ROUTING_KEY=target.frame.detected.queue_routing_key
+CONFIDENCE=0.6
